--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -47,5 +47,8 @@
   letter-spacing: 1.5px;
   border-bottom: 1px solid #ffffff;
   box-shadow: 0px 8px 11px -8px #000000;
-  text-shadow: 1px 1px 1px #000000;
+  text-shadow: 0.5px 0.5px 1px rgb(50, 50, 50),
+    -0.5px -0.5px 1px rgb(50, 50, 50),
+    0.5px -0.5px 1px rgb(50, 50, 50),
+    -0.5px 0.5px 1px rgb(50, 50, 50);
 }
