--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -46,7 +46,7 @@ $textShadow: rgb(0, 0, 0);
 
 .hmb-whiteText {
   letter-spacing: 1px;
-  text-shadow: 0.5px 0.5px 1px $textShadow, -0.5px -0.5px 1px $textShadow, 0.5px -0.5px 1px $textShadow, -0.5px 0.5px 1px $textShadow;
+  text-shadow: 0.5px 0.5px .5px $textShadow, -0.5px -0.5px .5px $textShadow, 0.5px -0.5px .5px $textShadow, -0.5px 0.5px .5px $textShadow;
   color: #ffffff;
   font-size: 1.063rem;
 }
