--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -47,19 +47,17 @@
   letter-spacing: 1px;
 
   .hmb-title {
-    display: inline-block;
     color: var(--HMB-orange) !important;
     font-weight: 700;
     font-size: 1.25rem;
   }
 
   .hmb-titleSmall {
-    font-size: .9em;
+    font-size: 1em;
     margin-left: 10px;
   }
 
   .hmb-title2 {
-    display: inline-block;
     margin-left: 10px;
     font-weight: 700;
     font-size: 1.25rem;
