--- a/src/components/body/body.scss
+++ b/src/components/body/body.scss
@@ -37,18 +37,15 @@
   color: var(--HMB-orange);
   text-transform: uppercase;
   font-weight: 700;
-  margin-bottom: 16px;
   line-height: 1.5rem;
   font-size: 1.063rem;
+  letter-spacing: 1.5px;
+  text-shadow: var(--HMB-text-shadow);
 }
 
 .hmb-sectionHeader-Line {
   @extend .hmb-sectionHeader;
-  letter-spacing: 1.5px;
   border-bottom: 1px solid #ffffff;
   box-shadow: 0px 8px 11px -8px #000000;
-  text-shadow: 0.5px 0.5px 1px rgb(50, 50, 50),
-    -0.5px -0.5px 1px rgb(50, 50, 50),
-    0.5px -0.5px 1px rgb(50, 50, 50),
-    -0.5px 0.5px 1px rgb(50, 50, 50);
+  margin-bottom: 16px;
 }
