--- a/src/components/body/pages/components/Components.scss
+++ b/src/components/body/pages/components/Components.scss
@@ -199,8 +199,8 @@
   }
 
   .hmb-collapsibleContainer {
-    transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1);
     height: auto;
     height: calc-size(auto, size);
     overflow-y: hidden;
