--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -63,7 +63,7 @@ a {
     padding: 0 calc(1.5rem * .5);
     box-sizing: border-box;
     margin: 0 auto;
-    background-color: #00000096;
+    background: linear-gradient(0deg, rgb(0 0 0 / 0%), rgb(0, 0, 0, 0.5882352941) 15%, rgb(0, 0, 0, 0.5882352941)100%);
     height: 100%;
   }
 
