Made text more readable, slowed down comets, Made Blue Panels semi transparent

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 :root {
   --HMB-orange: #ffaf19;
   --HMB-active-orange: #9d6c10;
-  --HMB-blue-background: linear-gradient(-45deg, rgb(0, 32, 48), rgb(0, 85, 138) 40%, rgb(0, 84, 133) 65%, rgb(0, 32, 48));
+  --HMB-blue-background: linear-gradient(-45deg, rgba(0, 32, 48, 97%), rgba(0, 85, 138, 97%) 40%, rgba(0, 84, 133, 97%) 65%, rgba(0, 32, 48, 97%));
   --HMB-text-shadow: 0.5px 0.5px 1px rgb(0, 0, 0),
     -0.5px -0.5px 1px rgb(0, 0, 0),
     0.5px -0.5px 1px rgb(0, 0, 0),
