--- a/src/components/body/pages/Pages.scss
+++ b/src/components/body/pages/Pages.scss
@@ -43,7 +43,7 @@
 }
 
 .hmb-whiteText {
-  letter-spacing: 1px;
+  letter-spacing: .012em;
   text-shadow: var(--HMB-text-shadow);
   color: #ffffff;
   font-size: 1.063rem;
